--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@gatsbystorefront/gatsby-theme-storefront-shopify": "^1.0.1",
-    "gatsby": "^2.13.38",
+    "gatsby": "^2.19.18",
+    "gatsby-plugin-sharp": "^2.4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
